--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "./distribution/index.js",
   "scripts": {
     "build": "gulp check",
-    "prepublish": "npm run build",
-    "lint": "gulp check",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
